--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-18 02:46:19
+lastsearch = 2024-07-18 16:46:04
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -12,9 +12,9 @@ title = Everon EPT20041 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
 url = https://www.everonvn.vn/chi-tiet/Everon-EPT20041.html
 
 [everon.online]
-match = -53.6%%
-title = Tổng Đại Lý Chăn Ga Gối Đệm Everon Artemis King Koil
-url = https://everon.online/collections/dem-everon-kich-thuoc-1m4-140-190-140-200-140x190-140x200
+match = 6.7%%
+title = Bộ ga chun chần
+url = https://everon.online/collections/types?q=bo-ga-chun-chan
 
 [www.diepxuan.com]
 match = 3.6%%
