--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-18 16:17:48
+lastsearch = 2024-07-18 16:46:16
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -482,9 +482,9 @@ title = Tổng hợp tin tức về Bắc Giang trên báo chí ngày 16/7/2024
 url = https://atgt.bacgiang.gov.vn/chi-tiet-tin-tuc/-/asset_publisher/9DJTiagaQTlH/content/tong-hop-tin-tuc-ve-bac-giang-tren-bao-chi-ngay-16-7-2024/20181
 
 [kinhtedothi.vn]
-match = -225.0%%
-title = Tai nạn giao thông mới nhất 16/7/2024: lọt gầm xe, cụ ông ...
-url = https://kinhtedothi.vn/tai-nan-giao-thong-moi-nhat-16-7-2024-lot-gam-xe-cu-ong-82-tuoi-tu-vong.html
+match = -206.2%%
+title = Tai nạn giao thông mới nhất 18/7/2024: 3 thanh niên tử ...
+url = https://kinhtedothi.vn/tai-nan-giao-thong-moi-nhat-18-7-2024-3-thanh-nien-tu-vong-tren-cau.html
 
 [www.bridgestone.com.vn]
 match = 6.2%%
