--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-07-18 09:57:09
+lastsearch = 2024-07-18 16:46:38
 
 [shopee.vn]
-match = 48.0%%
-title = Màn Chụp Tự Bung đỉnh vuông Mùng ...
-url = https://shopee.vn/Màn-Chụp-Tự-Bung-đỉnh-vuông-Mùng-Chụp-Đỉnh-Vuông-viền-trơn-cao-cấp-i.92196959.13058100091
+match = -8.0%%
+title = Màn chụp Tự Bung Đỉnh Vuông Cao Cấp Hoàng Nhân ...
+url = https://shopee.vn/Màn-chụp-Tự-Bung-Đỉnh-Vuông-Cao-Cấp-Hoàng-Nhân-Màn-Rộng-Dãi-Mắt-Nhỏ-Chống-Muỗi-II-BẢO-HÀNH-1-năm-i.397469085.9220637014
 
 [munghoangphat.com]
 match = 48.0%%
@@ -47,9 +47,9 @@ title = Màn chụp đỉnh vuông Cao Cấp EASY DREAM
 url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 
 [www.lazada.vn]
-match = -28.0%%
-title = Màn khung tự bung đỉnh vuông cao cấp hàng nhập khẩu ...
-url = https://www.lazada.vn/products/man-khung-tu-bung-dinh-vuong-cao-cap-hang-nhap-khau-18m-x-2m-i714064008.html
+match = 4.0%%
+title = Màn đỉnh Vuông Tự Bung Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/
 
 [demxanh.com]
 match = 12.0%%
