--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-18 14:27:36
+lastsearch = 2024-07-18 16:48:04
 
 [demtot.com]
-match = 45.0%%
-title = Đệm lò xo túi Acness
-url = https://demtot.com/dem-lo-xo-tui-acnes/
+match = 4.8%%
+title = Tag Archives: đệm lò xo
+url = https://demtot.com/tag/dem-lo-xo/
 
 [tuananh.vn]
 match = 52.4%%
@@ -48,8 +48,8 @@ url = https://www.diepxuan.com/nem-tuan-anh.html
 
 [sieuthidemonline.vn]
 match = -66.7%%
-title = Nệm lò xo túi Acnes cao cấp - Bảng giá khuyến mại!
-url = https://sieuthidemonline.vn/nem-lo-xo-tui-acnes/
+title = Nệm lò xo giàn Techwood cao cấp - Bảng giá khuyến mại!
+url = https://sieuthidemonline.vn/bang-gia-nem-lo-xo-gian-techwood/
 
 [demsingapore.com]
 match = 19.0%%
