--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-19 00:47:56
+lastsearch = 2024-07-19 01:18:39
 
 [chanrathanhthuy.com]
 match = -6.5%%
@@ -12,9 +12,9 @@ title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
 url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
 
 [demxanh.com]
-match = 58.1%%
-title = Bộ chăn ga gối Hanvico LIVING - LV18
-url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html
+match = -16.1%%
+title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
+url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
 
 [songhongonline.vn]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối SH_UC24 107
 url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc24-107
 
 [changagoidemsonghong.com]
-match = -29.0%%
-title = Chăn ga gối Sông Hồng dòng Home mã S17-05 - Chất Tencel ...
-url = https://changagoidemsonghong.com/chan-ga-goi-home-s17-05
+match = 38.7%%
+title = Bộ chăn ga gối Walt Disney mã mầu YC22012
+url = https://changagoidemsonghong.com/chan-ga-goi-yc22012
 
 [foreverbedding.net]
 match = -3.2%%
