--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-18 23:16:09
+lastsearch = 2024-07-19 01:18:05
 
 [www.diepxuan.com]
 match = -125.0%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -181.2%%
-title = Gorgeous @ARLINDA🤍 #beautytok #liptutorial #hudabeauty
-url = https://www.tiktok.com/@hudabeauty/video/7370757654081244459
+match = -168.8%%
+title = Swatching all 10 Majorly Matte Liquid Lip shades ...
+url = https://www.tiktok.com/@af94__/video/7147020616183450926?lang=en
 
 [archiveofourown.org]
 match = -137.5%%
