--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-18 22:21:35
+lastsearch = 2024-07-19 03:15:14
 
 [scholar.google.com]
 match = -43.8%%
@@ -92,9 +92,9 @@ title = maps/@21.001139,105.847882,17z?hl=vi
 url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
 
 [www.facebook.com]
-match = -106.2%%
-title = Tất cả 8 thành viên Stray Kids (bao gồm ...
-url = https://www.facebook.com/lacsaubich/photos/tất-cả-8-thành-viên-stray-kids-tái-ký-hợp-đồng-với-jypchiều-ngày-187-jyp-vui-mừn/807363144852806/
+match = -175.0%%
+title = Lạc Sâu Bích - TẤT CẢ 8 THÀNH VIÊN STRAY KIDS TÁI ...
+url = https://www.facebook.com/story.php/?story_fbid=807362258186228&id=100067373843814
 
 [www.cgv.vn]
 match = -143.8%%
@@ -112,9 +112,9 @@ title = Giá vàng 9999 hôm nay tại 64 tỉnh 13/7/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -118.8%%
-title = THUẬN PHÁO MAI HOA TUYỀN PHÁ HOÀNH XE TẬP 18
-url = https://www.youtube.com/watch?v=5tAzMm3oK7w
+match = -256.2%%
+title = Tin tức 24h tối 18/7: Mâu thuẫn, em trai bị anh ruột dùng hung ...
+url = https://www.youtube.com/watch?v=hteDrQdI8UA
 
 [books.google.com]
 match = -218.8%%
@@ -485,4 +485,9 @@ url = https://m.nhipcaudautu.vn/tai-chinh/thi-truong-rung-lac-dao-chieu-phut-cuo
 match = -100.0%%
 title = Chóng mặt với pha cua gắt của chứng khoán
 url = https://tygiausd.org/ChiTiet/25918-chong-mat-voi-pha-cua-gat-cua-chung-khoan-20240718165135709
+
+[caobangtv.vn]
+match = 43.8%%
+title = Chiếu cói Bảo Lạc
+url = http://caobangtv.vn/video-v8312/chieu-coi-bao-lac.html
 
