--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-19 01:47:09
+lastsearch = 2024-07-19 03:16:21
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -370,4 +370,9 @@ url = https://www.sec.gov.ph/
 match = -100.0%%
 title = Gamekapocs
 url = https://www.gamekapocs.hu/
+
+[www.refworld.org]
+match = -26.1%%
+title = Constitution of the Republic of Korea
+url = https://www.refworld.org/legal/legislation/natlegbod/1948/en/19949
 
