--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-07-18 22:35:38
+lastsearch = 2024-07-19 03:15:26
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -112,9 +112,9 @@ title = Faultlines 3-13-13
 url = http://www.johnknoop.com/Faultlines.pdf
 
 [www.worldbank.org]
-match = 0.0%%
-title = 
-url = https://www.worldbank.org/en/about/unit/sanctions-system
+match = -109.1%%
+title = World Bank Listing of Ineligible Firms and Individuals
+url = https://www.worldbank.org/en/projects-operations/procurement/debarred-firms
 
 [www.courts.ca.gov]
 match = 0.0%%
@@ -650,4 +650,9 @@ url = https://appropriations.house.gov/sites/evo-subsites/republicans-appropriat
 match = -77.3%%
 title = CIVIL ENGINEERS LICENSES ISSUED PRIOR TO 1/1/82
 url = https://www.bpelsg.ca.gov/pubs/num_eng_82.pdf
+
+[www.leg.state.nv.us]
+match = -54.5%%
+title = Nevada Medicaid Recipients Employed by ...
+url = https://www.leg.state.nv.us/Division/Research/Documents/RTTL_NRS422.27482_2022.pdf
 
