--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-18 21:35:30
+lastsearch = 2024-07-19 07:57:10
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
 url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
 
 [chieutrelanlan.com]
-match = -70.8%%
-title = Giá chiếu trúc 8 tấc, 1m, 1m2, 1m6, 1m8 có trên thị trường
-url = https://chieutrelanlan.com/chieu-truc-voi-day-du-cac-size-cho-nguoi-doc-than-cho-ca-dai-gia-dinh-k16.html
+match = -66.7%%
+title = Chiếu trúc 0.8m hạt nhỏ loại không viền màu trắng chất ...
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-80x190cm-19.html
 
 [trangvangvietnam.com]
 match = -37.5%%
@@ -29,7 +29,7 @@ url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-
 [www.facebook.com]
 match = 4.2%%
 title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
-url = https://www.facebook.com/chieutregiare/?locale=vi_VN
+url = https://www.facebook.com/chieutregiare/
 
 [shopee.vn]
 match = -37.5%%
