--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-19 04:27:34
+lastsearch = 2024-07-19 10:41:16
 
 [shopee.vn]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Chăn Nhung 4kg Giá Tốt T06/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/chan-nhung-4kg/
 
 [tiki.vn]
-match = -18.5%%
-title = Chăn nhung tuyết dày 5kg hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn nhung tuyết dày 5kg
+match = 11.1%%
+title = Chăn nhung tuyết hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn nhung tuyết
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -47,9 +47,9 @@ title = Chăn Lông Cừu Tuyết YUKI Siêu Ấm Nặng 4kg Chính ...
 url = https://thitruongsi.com/chan-long-cuu-tuyet-yuki-sieu-am-nang-4kg-chinh-hang-men-yuki-day-min-kich-thuoc-2mx2m3-hang-xuat-nhat-gia-ib-a-2129967.html
 
 [www.youtube.com]
-match = -74.1%%
-title = Cựu Thủ tướng Thái Lan Thaksin được trả tự do - Tin thế giới ...
-url = https://www.youtube.com/watch?v=zGtjB2l6au4
+match = -66.7%%
+title = Bản tin sáng 19/7: Thái Lan phát hiện bằng chứng mới vụ ...
+url = https://www.youtube.com/watch?v=mtafFcc3uPk
 
 [www.diepxuan.com]
 match = 22.2%%
