--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-19 09:02:48
+lastsearch = 2024-07-19 10:33:49
 
 [shopee.vn]
 match = 18.5%%
@@ -12,9 +12,9 @@ title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
 url = https://shopee.vn/list/chiếu điều hòa
 
 [demxanh.com]
-match = -14.8%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 14.8%%
+title = Sử dụng chiếu điều hòa có tốt hay không?
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [tiki.vn]
 match = 33.3%%
@@ -32,9 +32,9 @@ title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyo
 url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
 
 [thegioinem.com]
-match = 33.3%%
-title = 10+ mẫu chiếu điều hoà hot nhất năm
-url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
+match = 7.4%%
+title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
+url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [chiaki.vn]
 match = -3.7%%
@@ -155,4 +155,9 @@ url = http://www.namat.vn/index.php?route=product/product&product_id=128
 match = -40.7%%
 title = Sự thật về công dụng của chiếu điều hòa khiến người dùng ...
 url = https://www.congnghieptieudung.vn/su-that-ve-cong-dung-cua-chieu-dieu-hoa-khien-nguoi-dung-hieu-lam-dt34423
+
+[www.nemuytin.com]
+match = -22.2%%
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 4 - Nệm Uy Tín
+url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-4/
 
