--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-19 02:30:21
+lastsearch = 2024-07-19 10:36:38
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -57,9 +57,9 @@ title = K789 Club Game Bài 3 Cây- IOS14.615.2948
 url = https://saigontourist.edu.vn/newslEjNSO/kmtrooj.html
 
 [sv.ut.edu.vn]
-match = -75.0%%
-title = luật poker omaha-App Store5.93.517
-url = https://sv.ut.edu.vn/newsr4ru7ie5.html
+match = -50.0%%
+title = bong188 bet- IOS14.794.7756
+url = https://sv.ut.edu.vn/newsx1vons9n.html
 
 [tiki.vn]
 match = -125.0%%
