--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-19 09:07:24
+lastsearch = 2024-07-19 10:38:58
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -58.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = 8.7%%
+title = 1972 in the Vietnam War
+url = https://en.wikipedia.org/wiki/1972_in_the_Vietnam_War
 
 [www.facebook.com]
 match = -108.7%%
@@ -32,9 +32,9 @@ title = Korean Embassy in South Africa 주남아공한국대사관
 url = https://www.facebook.com/KoreanEmbassySouthAfrica/
 
 [www.cia.gov]
-match = -82.6%%
-title = N. KOREAN PATROL BOATS SEIZE U.S. SPY SHIP WITH ...
-url = https://www.cia.gov/readingroom/document/06638269
+match = -13.0%%
+title = Search | CIA FOIA (foia.cia.gov)
+url = https://www.cia.gov/readingroom/search/site/ALIEN?page=161
 
 [journal.transformativeworks.org]
 match = -91.3%%
